--- a/template2/src/style.css
+++ b/template2/src/style.css
@@ -5,7 +5,7 @@
   top: 0;
 }
 .cou1{
-    background-image: url('./slide1.jpg');
+    background-image: url('../slide1.jpg');
     background-position: left;
     background-size: auto;
     height: 60vh;
@@ -14,7 +14,7 @@
 
 }
 .cou2{
-    background-image: url('./slide2.jpg');
+    background-image: url('../slide2.jpg');
     background-position:left;
     background-size: cover;
     height: 60vh;
