--- a/template2/src/style.css
+++ b/template2/src/style.css
@@ -5,7 +5,7 @@
   top: 0;
 }
 .cou1{
-    background-image: url('../slide1.jpg');
+    background-image: url('../public/slide1.jpg');
     background-position: left;
     background-size: auto;
     height: 60vh;
@@ -86,12 +86,12 @@ color: black;
     transition:  2s linear;
 }
 .card1{
-    background-image: url('./public/bannerV1-img1.jpg');
+    background-image: url('../public/bannerV1-img1.jpg');
 }
 .card2{
-    background-image: url('./public/bannerV1-img2.jpg');
+    background-image: url('../public/bannerV1-img2.jpg');
 }.card3{
-    background-image: url('./public/bannerV1-img3.jpg');
+    background-image: url('../public/bannerV1-img3.jpg');
 }
 
 .home2{
@@ -181,7 +181,7 @@ font-size: large;
 .review1 {
 width: 100%;
 height: 300px;
-background-image: url("./public/bannerV1-img2.jpg");
+background-image: url("../public/bannerV1-img2.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 background-position: 100% 20%;
@@ -201,7 +201,7 @@ background-position: 100% 20%;
   filter: grayscale(100%);
 }
 .review2{
-  background-image: url(./about3.2.jpg);
+  background-image: url("../public/about3.2.jpg");
 }
 .ab-card img{
 width: 20%;
@@ -212,7 +212,7 @@ height: 30%;
 .Contact1 {
   width: 100%;
   height: 300px;
-  background-image: url("./bg_page.jpg");
+  background-image: url("../public/bg_page.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 100% 80%;
